database-setup.yml
#
# Copyright © 2016-2019 The Thingsboard Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: v1
kind: Pod
metadata:
  name: tb-db-setup
spec:
  volumes:
    - name: tb-node-config
      configMap:
        name: tb-node-config
        items:
          - key: conf
            path:  thingsboard.conf
          - key: logback
            path:  logback.xml
    - name: tbnode-ca-pub
      secret:
        secretName: ca-pub
        items:
          - key: cacert.pem
            path: cacert.pem
    - name: merged-cacerts
      emptyDir: {}
  containers:
  - name: tb-db-setup
    imagePullPolicy: Always
    image: store/thingsboard/tb-pe-node:2.4.3PE
    volumeMounts:
      - mountPath: /config
        name: tb-node-config
      - mountPath: /tmp/tbnode-truststore/
        name: merged-cacerts
    command: ['sh', '-c', 'while [ ! -f /install-finished ]; do sleep 2; done;']
  restartPolicy: Never
  imagePullSecrets:
  - name: dockerhub
