cassandra-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: elassandra
    app.kubernetes.io/managed-by: elassandra-operator
    cluster: orchid
    datacenter: dc1
    parent: elassandra-orchid-dc1
  name: elassandra-orchid-dc1-cql
  namespace: default
  ownerReferences:
  - apiVersion: stable.strapdata.com/v1
    blockOwnerDeletion: true
    controller: true
    kind: ElassandraDataCenter
    name: elassandra-orchid-dc1
    uid: 734f1151-3849-11ea-8c29-6255ee7682b2
spec:
  ports:
  - name: cql
    port: 39042
    protocol: TCP
    targetPort: 39042
  selector:
    app: elassandra
    app.kubernetes.io/managed-by: elassandra-operator
    cluster: orchid
    datacenter: dc1
    parent: elassandra-orchid-dc1
  sessionAffinity: None
  type: LoadBalancer
