thingsboard.yml
#
# Copyright © 2016-2019 The Thingsboard Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zookeeper
spec:
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: server
        imagePullPolicy: Always
        image: zookeeper:3.5
        terminationMessagePolicy: "FallbackToLogsOnError"
        ports:
        - containerPort: 2181
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 2181
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 2181
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  type: ClusterIP
  selector:
    app: zookeeper
  ports:
  - name: zk-port
    port: 2181
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tb-kafka
spec:
  template:
    metadata:
      labels:
        app: tb-kafka
    spec:
      containers:
      - name: server
        imagePullPolicy: Always
        image: wurstmeister/kafka:2.12-2.2.1
        terminationMessagePolicy: "FallbackToLogsOnError"
        ports:
        - containerPort: 9092
        readinessProbe:
          periodSeconds: 20
          tcpSocket:
            port: 9092
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 9092
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-kafka
spec:
  type: ClusterIP
  selector:
    app: tb-kafka
  ports:
  - name: tb-kafka-port
    port: 9092
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tb-redis
spec:
  template:
    metadata:
      labels:
        app: tb-redis
    spec:
      containers:
      - name: server
        imagePullPolicy: Always
        image: redis:4.0
        terminationMessagePolicy: "FallbackToLogsOnError"
        ports:
        - containerPort: 6379
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
      volumes:
      - name: redis-data
        emptyDir: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-redis
spec:
  type: ClusterIP
  selector:
    app: tb-redis
  ports:
  - name: tb-redis-port
    port: 6379
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tb-js-executor
spec:
  replicas: 5
  selector:
    matchLabels:
      app: tb-js-executor
  template:
    metadata:
      labels:
        app: tb-js-executor
    spec:
      containers:
      - name: server
        imagePullPolicy: Always
        image: store/thingsboard/tb-pe-js-executor:2.4.3PE
        terminationMessagePolicy: "FallbackToLogsOnError"
      restartPolicy: Always
      imagePullSecrets:
      - name: dockerhub
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tb-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tb-node
  template:
    metadata:
      labels:
        app: tb-node
    spec:
      volumes:
        - name: tb-node-config
          configMap:
            name: tb-node-config
            items:
              - key: conf
                path:  thingsboard.conf
              - key: logback
                path:  logback.xml
        - name: tbnode-ca-pub
          secret:
            secretName: ca-pub
            items:
              - key: cacert.pem
                path: cacert.pem
# to allow pod restart register the instance-license.data file in the / path of the container into  a k8s secret
# and mount this secret in tmp dir then copy the file in the right place with lifecycle hook.
#  https://www.jeffgeerling.com/blog/2019/mounting-kubernetes-secret-single-file-inside-pod
#  kubectl cp tb-node-5f665ccb56-s95tz:/instance-license.data instance-license.data   &&   kubectl create secret generic tb-instance-license --from-file=./instance-license.data
        - name: license-data
          secret:
            secretName: tb-instance-license
        - name: merged-cacerts
          emptyDir: {}
      containers:
      - name: server
        imagePullPolicy: Always
        image: store/thingsboard/tb-pe-node:2.4.3PE
        terminationMessagePolicy: "FallbackToLogsOnError"
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9001
          name: rpc
        volumeMounts:
          - mountPath: /config
            name: tb-node-config
          - mountPath: /tmp/tbnode-truststore/
            name: merged-cacerts
# to allow pod restart register the instance-license.data file in the / path of the container into  a k8s secret
# and mount this secret in tmp dir then copy the file in the right place with lifecycle hook.
#  https://www.jeffgeerling.com/blog/2019/mounting-kubernetes-secret-single-file-inside-pod
          - mountPath: /tmp/license/
            name: license-data
        lifecycle:
          postStart:
            exec:
              command:
                - /bin/sh
                - -c
                - cp /tmp/license/instance-license.data /instance-license.data
        livenessProbe:
          httpGet:
            path: /login
            port: http
          initialDelaySeconds: 120
          timeoutSeconds: 10
      restartPolicy: Always
      imagePullSecrets:
      - name: dockerhub
---
apiVersion: v1
kind: Service
metadata:
  name: tb-node
spec:
  type: ClusterIP
  selector:
    app: tb-node
  ports:
  - port: 8080
    name: http
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tb-mqtt-transport
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tb-mqtt-transport
  template:
    metadata:
      labels:
        app: tb-mqtt-transport
    spec:
      volumes:
        - name: tb-mqtt-transport-config
          configMap:
            name: tb-mqtt-transport-config
            items:
            - key: conf
              path:  tb-mqtt-transport.conf
            - key: logback
              path:  logback.xml
      containers:
      - name: server
        imagePullPolicy: Always
        image: store/thingsboard/tb-pe-mqtt-transport:2.4.3PE
        terminationMessagePolicy: "FallbackToLogsOnError"
        ports:
        - containerPort: 1883
          name: mqtt
        volumeMounts:
          - mountPath: /config
            name: tb-mqtt-transport-config
        readinessProbe:
          periodSeconds: 20
          tcpSocket:
            port: 1883
        livenessProbe:
          periodSeconds: 20
          tcpSocket:
            port: 1883
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerhub
---
apiVersion: v1
kind: Service
metadata:
  name: tb-mqtt-transport
spec:
  type: LoadBalancer
  selector:
    app: tb-mqtt-transport
  ports:
  - port: 1883
    targetPort: 1883
    name: mqtt
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tb-http-transport
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tb-http-transport
  template:
    metadata:
      labels:
        app: tb-http-transport
    spec:
      volumes:
        - name: tb-http-transport-config
          configMap:
            name: tb-http-transport-config
            items:
            - key: conf
              path:  tb-http-transport.conf
            - key: logback
              path:  logback.xml
      containers:
      - name: server
        imagePullPolicy: Always
        image: store/thingsboard/tb-pe-http-transport:2.4.3PE
        terminationMessagePolicy: "FallbackToLogsOnError"
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
          - mountPath: /config
            name: tb-http-transport-config
        readinessProbe:
          periodSeconds: 20
          tcpSocket:
            port: 8080
        livenessProbe:
          periodSeconds: 20
          tcpSocket:
            port: 8080
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerhub
---
apiVersion: v1
kind: Service
metadata:
  name: tb-http-transport
spec:
  type: ClusterIP
  selector:
    app: tb-http-transport
  ports:
  - port: 8080
    name: http
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tb-web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tb-web-ui
  template:
    metadata:
      labels:
        app: tb-web-ui
    spec:
      containers:
      - name: server
        imagePullPolicy: Always
        image: store/thingsboard/tb-pe-web-ui:2.4.3PE
        terminationMessagePolicy: "FallbackToLogsOnError"
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: /index.html
            port: http
          initialDelaySeconds: 120
          timeoutSeconds: 10
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerhub
---
apiVersion: v1
kind: Service
metadata:
  name: tb-web-ui
spec:
  type: ClusterIP
  selector:
    app: tb-web-ui
  ports:
  - port: 8080
    name: http
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tb-web-report
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tb-web-report
  template:
    metadata:
      labels:
        app: tb-web-report
    spec:
      containers:
        - name: server
          imagePullPolicy: Always
          image: store/thingsboard/tb-pe-web-report:2.4.3PE
          terminationMessagePolicy: "FallbackToLogsOnError"
          ports:
            - containerPort: 8383
              name: http
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerhub
---
apiVersion: v1
kind: Service
metadata:
  name: tb-web-report
spec:
  type: ClusterIP
  selector:
    app: tb-web-report
  ports:
    - port: 8383
      name: http
---
